Updated the employee page

--- a/style2.css
+++ b/style2.css
@@ -95,7 +95,8 @@ aside {
     padding-left: 20px;
   }
 
-  input{ 
+  input , select
+  { 
     display: block;
     margin-top: 5px ;
     padding-left: 10px;
@@ -109,7 +110,7 @@ aside {
 
     label{
         font-weight:bold;
-        font-size: small;
+        font-size: 0.9rem;
         font-family: 'Montserrat'
     }
 
@@ -149,7 +150,7 @@ aside {
     margin-top: 40px;
   }
 
-  button{
+  .b1{
     color: white;
     font-weight: bold;
     border: solid #3dc9f0;
@@ -160,5 +161,37 @@ aside {
     border-radius: 5px;
 }
 
+.b2{
+    color: rgb(145, 139, 139);
+    font-weight: bold;
+    border: solid #dfe2e2;
+    background-color: #eff1f1;
+    width: 150px;
+    margin-right: 15px;
+    height: 35px;
+    border-radius: 5px;
+}
+
+.b1:hover,.b2:hover
+{
+    border: #6e9be0;  
+    background-image:none;
+    background-color:#6099ee;
+}
+
+input:focus::placeholder {
+    color: #999;
+}
+
+input:focus { 
+    outline: none !important;
+    border-color:#3dc9f0;
+ }
+
+ /* option{
+    color:#bd3232;
+ }  */
   
-  
+ select{
+    color: #a59c9c;
+ }
